# hydra-poc

./: cabal.project
debugging/: contract.pir
haddock/hydra-node/: Hydra-API-Server.html  Hydra-Chain-Direct-Tx.html  Hydra-Chain-Direct-Util.html  Hydra-Chain-Direct-Wallet.html  Hydra-Chain-Direct.html  Hydra-Chain-ExternalPAB.html  Hydra-Chain-ZeroMQ.html  Hydra-Chain.html  Hydra-ClientInput.html  Hydra-HeadLogic.html  Hydra-Ledger-Cardano.html  Hydra-Ledger-MaryTest.html  Hydra-Ledger-Simple.html  Hydra-Ledger.html  Hydra-Logging-Messages.html  Hydra-Logging-Monitoring.html  Hydra-Logging.html  Hydra-Network-BroadcastToSelf.html  Hydra-Network-Heartbeat.html  Hydra-Network-Message.html  Hydra-Network-Ouroboros-Client.html  Hydra-Network-Ouroboros-Server.html  Hydra-Network-Ouroboros-Type.html  Hydra-Network-Ouroboros.html  Hydra-Network-ZeroMQ.html  Hydra-Network.html  Hydra-Node-Version.html  Hydra-Node.html  Hydra-Options.html  Hydra-Party.html  Hydra-ServerOutput.html  Hydra-Snapshot.html  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  (+18 more)
haddock/hydra-plutus/: Hydra-Contract-Commit.html  Hydra-Contract-ContestationPeriod.html  Hydra-Contract-Head.html  Hydra-Contract-Initial.html  Hydra-Contract-OffChain.html  Hydra-Contract-OnChain.html  Hydra-Contract-PAB.html  Hydra-Contract-Party.html  Hydra-ContractSM.html  Hydra-Data-ContestationPeriod.html  Hydra-Data-HeadParameters.html  Hydra-Data-Party.html  Hydra-Depreciated-OffChain.html  Hydra-Depreciated-OnChain.html  Hydra-OnChain-Util.html  Hydra-PAB.html  doc-index.html  hydra-plutus.haddock  (+1 more)
hydra-arch-plugin/: hydra-arch-plugin.cabal
hydra-arch-plugin/src/Hydra/Architecture/: Annotations.hs  Plugin.hs
hydra-node/: hydra-node.cabal
hydra-plutus/: hydra-plutus.cabal
(+80 files in other folders)
