cabal-version: 2.2

name:               hydra-arch-plugin
version:            0.1.0
description:        A GHC Plugin for annotating architecturally significant definitions
author:             IOHK
copyright:          2021 IOHK
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/hydra-node

flag development
     description: Disable -Werror for development
     default: False
     manual: True

common project-config
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  if !flag(development)
      ghc-options: -Werror

library
  import: project-config
  hs-source-dirs: src
  exposed-modules:
    Hydra.Architecture.Plugin
  build-depends:
      base
    , ghc
  ghc-options:
    -haddock
